--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -47,7 +47,32 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/tvname"
+                android:id="@+id/ch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:text="차가운"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+            <TextView
+                android:id="@+id/textView67"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아메리카노"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/ch"
+                app:layout_constraintStart_toEndOf="@+id/ch"
+                app:layout_constraintTop_toTopOf="@+id/ch" />
+
+            <TextView
+                android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
@@ -64,25 +89,11 @@
                 android:id="@+id/imageView2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintEnd_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toTopOf="@+id/textView5"
+                android:layout_marginStart="300dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline10"
                 app:srcCompat="@drawable/casher" />
 
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="차가운 아메리카노를 선택하셨습니다."
-                android:textColor="#504E4E"
-                android:textSize="46sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.499"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvname" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -92,9 +103,9 @@
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
-                app:layout_constraintStart_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ch" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -108,13 +119,6 @@
 
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
-
-            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -126,7 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="222dp" />
+                app:layout_constraintGuide_begin="175dp" />
 
             <ImageButton
                 android:id="@+id/btn_cart_page3"
@@ -136,8 +140,8 @@
                 android:layout_marginTop="11dp"
                 android:backgroundTint="#00FFFFFF"
                 app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@+id/tvname"
-                app:layout_constraintTop_toTopOf="@+id/tvname"
+                app:layout_constraintStart_toEndOf="@+id/tvcname"
+                app:layout_constraintTop_toTopOf="@+id/tvcname"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
@@ -171,8 +175,8 @@
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="600dp"
-                android:layout_height="700dp"
+                android:layout_width="602dp"
+                android:layout_height="392dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView4"
                 app:layout_constraintStart_toStartOf="@+id/textView"
@@ -225,6 +229,26 @@
                 app:layout_constraintEnd_toEndOf="@+id/textView19"
                 app:layout_constraintStart_toStartOf="@+id/textView19"
                 app:layout_constraintTop_toBottomOf="@+id/textView19" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="장바구니 확인"
+                tools:layout_editor_absoluteX="687dp"
+                tools:layout_editor_absoluteY="543dp" />
+
+            <TextView
+                android:id="@+id/textView49"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="를 선택하셨습니다"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintStart_toEndOf="@+id/textView67"
+                app:layout_constraintTop_toTopOf="@+id/textView67" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
