--- a/app/src/main/res/layout-land/activity_control_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_control_menu_page.xml
@@ -536,11 +536,11 @@
                 android:hint="카테고리 추가"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/button5"
+                app:layout_constraintEnd_toStartOf="@+id/btn_Hot_cold_page2"
                 app:layout_constraintTop_toTopOf="@+id/textView45" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btn_Hot_cold_page2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="400dp"
