--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -40,7 +40,7 @@
                 app:srcCompat="@drawable/kobbicon" />
 
             <TextView
-                android:id="@+id/tvmenu"
+                android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
