--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#FFFFFF"
-    tools:context=".Main_menu_page">
+    tools:context=".Customer_main_page">
 
     <ScrollView
         android:layout_width="0dp"
@@ -31,6 +31,20 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.10218978" />
 
+            <Button
+                android:id="@+id/btn_card"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/button_style"
+                android:backgroundTint="#FF5555"
+                android:text="모드 전환"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="0dp"
@@ -47,7 +61,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/tvname"
+                android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
@@ -64,24 +78,68 @@
                 android:id="@+id/imageView2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="#FEE9E9"
-                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
                 app:srcCompat="@drawable/casher" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="어떤 메뉴를 주문할까요?"
+                android:layout_marginStart="20dp"
+                android:text="안녕하세요:)"
                 android:textColor="#504E4E"
-                android:textSize="48sp"
+                android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.442"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="매장에서 드시나요? 아니면 포장해드릴까요?"
+                android:textColor="#504E4E"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <ImageButton
+                android:id="@+id/btn_Eat_main_menu_page"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/eat2"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+            <ImageButton
+                android:id="@+id/btn_TakeOut_main_menu_page"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="100dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/takeout2"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline8"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -92,107 +150,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:srcCompat="@drawable/kobbtext" />
-
-
-            <Button
-                android:id="@+id/btn_small_menu_page1"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="커피"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/btn_small_menu_page2"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2" />
-
-            <Button
-                android:id="@+id/btn_small_menu_page2"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="라떼"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintEnd_toStartOf="@+id/guideline8"
-                app:layout_constraintHorizontal_bias="0.694"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline10" />
-
-            <Button
-                android:id="@+id/btn_small_menu_page3"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="96dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="차"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page2" />
-
-            <Button
-                android:id="@+id/btn_small_menu_page5"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="50dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="요거트"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/guideline14"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline8"
-                app:layout_constraintTop_toTopOf="@+id/guideline10" />
-
-            <Button
-                android:id="@+id/btn_small_menu_page4"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="에이드"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/btn_small_menu_page5"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5" />
-
-            <Button
-                android:id="@+id/btn_small_menu_page6"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="96dp"
-                android:background="@drawable/btn_radius"
-                android:backgroundTint="#FF5555"
-                android:text="디저트"
-                android:textColor="#F7F7F7"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page5" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline8"
@@ -207,13 +164,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="736dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="222dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
