--- a/app/src/main/res/layout/activity_main_menu_page.xml
+++ b/app/src/main/res/layout/activity_main_menu_page.xml
@@ -39,7 +39,7 @@
                 app:srcCompat="@drawable/kobbicon" />
 
             <TextView
-                android:id="@+id/tvmenu"
+                android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
