--- a/app/src/main/res/layout-land/activity_small_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page.xml
@@ -129,7 +129,7 @@
                 app:layout_constraintGuide_begin="222dp" />
 
             <ImageButton
-                android:id="@+id/btn_cart_page3"
+                android:id="@+id/btn_Cart_page1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="500dp"
@@ -211,9 +211,9 @@
                 android:text="뒤로 가기"
                 android:textColor="#504E4E"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_cart_page3"
-                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-                app:layout_constraintTop_toTopOf="@+id/btn_cart_page3" />
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Cart_page1"
+                app:layout_constraintEnd_toStartOf="@+id/btn_Cart_page1"
+                app:layout_constraintTop_toTopOf="@+id/btn_Cart_page1" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
