--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -286,7 +286,7 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline8" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btn_Cart_page1"
                 android:layout_width="270dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="30dp"
