--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/tvcname"
+                android:id="@+id/tvcname2"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
@@ -65,7 +65,8 @@
                 android:id="@+id/imageView2"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="90dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintEnd_toStartOf="@+id/textView6"
                 app:layout_constraintTop_toTopOf="@+id/textView48"
@@ -75,20 +76,20 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="67dp"
-                android:layout_marginEnd="20dp"
                 android:text="아메리카노"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView6"
                 app:layout_constraintEnd_toStartOf="@+id/textView52"
-                app:layout_constraintStart_toEndOf="@+id/textView48" />
+                app:layout_constraintStart_toEndOf="@+id/ch"
+                app:layout_constraintTop_toTopOf="@+id/ch" />
 
             <TextView
                 android:id="@+id/textView52"
                 android:layout_width="wrap_content"
                 android:layout_height="67dp"
-                android:layout_marginEnd="150dp"
+                android:layout_marginEnd="170dp"
                 android:text="선택하셨습니다."
                 android:textColor="#504E4E"
                 android:textSize="46sp"
@@ -100,12 +101,13 @@
                 android:id="@+id/ch"
                 android:layout_width="wrap_content"
                 android:layout_height="67dp"
+                android:layout_marginStart="7dp"
                 android:text="차가운"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/textView6"
-                app:layout_constraintTop_toTopOf="@+id/textView5" />
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintStart_toEndOf="@+id/imageView2" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -178,20 +180,20 @@
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-                app:layout_constraintTop_toTopOf="@+id/tvcname" />
+                app:layout_constraintTop_toTopOf="@+id/tvcname2" />
 
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="0dp"
+                android:layout_width="1200dp"
                 android:layout_height="450dp"
+                android:layout_marginTop="160dp"
                 android:background="#FF5555"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.562"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                app:layout_constraintVertical_bias="0.66" />
+                app:layout_constraintTop_toBottomOf="@+id/tvcname2" />
 
             <TextView
                 android:id="@+id/textView68"
@@ -276,8 +278,8 @@
                 android:id="@+id/button3"
                 android:layout_width="270dp"
                 android:layout_height="200dp"
-                android:layout_marginStart="35dp"
                 android:layout_marginBottom="10dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FFFFFF"
                 android:text="장바구니  담기"
                 android:textColor="#504E4E"
@@ -291,6 +293,7 @@
                 android:layout_width="270dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="30dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FFFFFF"
                 android:text="장바구니  확인"
                 android:textColor="#504E4E"
@@ -303,7 +306,6 @@
                 android:id="@+id/textView59"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
                 android:text="메뉴   : "
                 android:textColor="#FFFFFF"
