--- a/app/src/main/res/layout-land/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout-land/activity_hot_cold_page.xml
@@ -47,7 +47,7 @@
                             app:layout_constraintVertical_bias="0.0" />
 
                         <TextView
-                            android:id="@+id/tvcname"
+                            android:id="@+id/tvcname2"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:gravity="center"
