--- a/app/src/main/res/layout-land/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout-land/activity_start_kiosk_page.xml
@@ -8,20 +8,14 @@
     android:backgroundTint="#FFFFFF"
     tools:context=".Start_kiosk_page">
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/btn_Choice_mode_page"
+                android:id="@+id/btn_Mode_change_page"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="20dp"
@@ -67,7 +61,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+                app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page1"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
@@ -85,7 +79,7 @@
                 app:layout_constraintTop_toTopOf="@+id/button" />
 
             <ImageButton
-                android:id="@+id/imageButton4"
+                android:id="@+id/btn_User_info_page1"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
@@ -121,7 +115,7 @@
                 android:layout_marginStart="65dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="65dp"
-                android:layout_marginBottom="80dp"
+                android:layout_marginBottom="50dp"
                 android:background="#FFEAEA"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -237,9 +231,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_end="80dp" />
+                app:layout_constraintGuide_end="60dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
