--- a/app/src/main/res/layout/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout/activity_choice_pay_page.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@drawable/kobbicon" />
 
     <TextView
-        android:id="@+id/tvcname"
+        android:id="@+id/tvcname2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
@@ -112,7 +112,7 @@
         app:srcCompat="@drawable/shoppingcart" />
 
     <Button
-        android:id="@+id/btn_card"
+        android:id="@+id/btn_Mode_change_page"
         android:layout_width="200dp"
         android:layout_height="161dp"
         android:layout_marginStart="100dp"
@@ -160,7 +160,7 @@
         android:textColor="#F7F7F7"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_card" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Mode_change_page" />
 
     <Button
         android:id="@+id/btn_payco"
