--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintGuide_percent="0.10218978" />
 
             <Button
-                android:id="@+id/btn_card"
+                android:id="@+id/btn_Mode_change_page"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
@@ -61,7 +61,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/tvcname"
+                android:id="@+id/tvcname2"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
