--- a/app/src/main/res/layout/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout/activity_hot_cold_page.xml
@@ -146,7 +146,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvcname"
+                android:id="@+id/tvcname2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
