--- a/app/src/main/res/layout/activity_small_menu_page1_1.xml
+++ b/app/src/main/res/layout/activity_small_menu_page1_1.xml
@@ -76,7 +76,7 @@
         app:srcCompat="@drawable/casher" />
 
     <TextView
-        android:id="@+id/tvcname"
+        android:id="@+id/tvcname2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
